@@ -2,7 +2,9 @@ package com.trainerlog.service.training_session;
 import lombok.AllArgsConstructor;
 
 import java.util.UUID;
+import java.util.stream.Collectors;
 
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 import com.trainerlog.dto.training_session.TrainingSessionRequestDto;
 import com.trainerlog.dto.training_session.TrainingSessionResponseDto;
@@ -12,6 +14,9 @@ import com.trainerlog.repository.UserRepository;
 import com.trainerlog.repository.TrainingSessionRepository;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import java.time.LocalDate;
+import java.time.LocalDateTime;
 import java.util.List;
 @Service
 @AllArgsConstructor
@@ -83,7 +88,7 @@ public class TrainingSessionServiceImpl implements TrainingSessionService {
 
         TrainingSession newTrainingSession = TrainingSession.builder()
                 .client(client)
-                .date(trainingSessionRequestDto.getDate())
+                .date(trainingSessionRequestDto.getDate().toLocalDate())
                 .build();
         log.info("Creating training session for client with id={}", trainingSessionRequestDto.getClientId());
 
@@ -109,7 +114,7 @@ public class TrainingSessionServiceImpl implements TrainingSessionService {
         TrainingSession existingTrainingSession =  getClientTrainingSession(trainingSessionRequestDto.getClientId(), sessionId);
 
         // updating the date of the existing training session
-        existingTrainingSession.setDate(trainingSessionRequestDto.getDate());
+        existingTrainingSession.setDate(trainingSessionRequestDto.getDate().toLocalDate());
 
         return TrainingSessionResponseDto.fromEntity(trainingSessionRepository.save(existingTrainingSession));
     }
@@ -164,18 +169,22 @@ public class TrainingSessionServiceImpl implements TrainingSessionService {
      */
 
     @Override
-    public List<TrainingSessionResponseDto> getAllTrainingSessions(UUID clientId, UUID trainerId) {
+    public List<TrainingSessionResponseDto> getAllTrainingSessions(UUID clientId, UUID trainerId,LocalDate startDate, LocalDate endDate) {
+
         log.info("Attempting to retrieve all training sessions for clientId={} and trainerId={}", clientId, trainerId);
 
-        
         getAuthorizedClient(clientId, trainerId);
 
+        List<TrainingSession> trainingSessions;
 
-        List<TrainingSession> trainingSessions = trainingSessionRepository.findAllByClient_Id(clientId);
-        return trainingSessions.stream()
-                .map(TrainingSessionResponseDto::fromEntity)
-                .toList();
+        trainingSessions = trainingSessionRepository.findByClient_IdAndDateGreaterThanEqualAndDateLessThanEqual( clientId, startDate, endDate);
+
+        log.info("Found {} training sessions for clientId={}", trainingSessions.size(), clientId);
+    
+         return trainingSessions.stream()
+            .map(TrainingSessionResponseDto::fromEntity)
+            .collect(Collectors.toList());
+
     }
-
        
 }
